--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://JGARCIAPAS.github.io/schedules/build",
+  "homepage": "https://jgarciapas.github.io/schedules/",
   "name": "schedules",
   "private": true,
   "version": "0.0.0",
