--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://jgarciapas.github.io/schedules/",
   "name": "schedules",
   "private": true,
   "version": "0.0.0",
@@ -11,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
